After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 781830 - Fix some typos and errors in GVariant documentation
Fix some typos and errors in GVariant documentation
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: docs
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2017-04-27 12:22 UTC by Krzesimir Nowak
Modified: 2017-04-27 14:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fixes some typos and errors in GVariant documentation (4.25 KB, patch)
2017-04-27 12:22 UTC, Krzesimir Nowak
none Details | Review
Fixes some typos and errors in GVariant documentation, v2 (4.10 KB, patch)
2017-04-27 14:20 UTC, Krzesimir Nowak
committed Details | Review

Description Krzesimir Nowak 2017-04-27 12:22:09 UTC
Created attachment 350546 [details] [review]
Fixes some typos and errors in GVariant documentation

Found some typos and errors when reading the GVariant docs, the attached patch fixes some of them.
Comment 1 Philip Withnall 2017-04-27 12:35:02 UTC
Review of attachment 350546 [details] [review]:

Commit message says:
> Reformatted the docs for G_VARIANT_UINT64

I think you mean `G_VARIANT_TYPE_UINT64`.

A nice set of fixes. One nitpick (apart from the commit message).

::: glib/gvariant.c
@@ -1191,3 @@
  *
- * @n_elements, which must be non-%NULL is set equal to the number of
- * items in the array.

I’d keep this paragraph and change the “which must be non-%NULL is set equal to” bit to something like “must be”. I’d keep the paragraph as it provides a contrast to the paragraph about @element_size.
Comment 2 Krzesimir Nowak 2017-04-27 14:20:08 UTC
Created attachment 350555 [details] [review]
Fixes some typos and errors in GVariant documentation, v2

Updated.
Comment 3 Philip Withnall 2017-04-27 14:42:44 UTC
Review of attachment 350555 [details] [review]:

++
Comment 4 Philip Withnall 2017-04-27 14:44:39 UTC
Thanks!